c/examples/gcc/testsuite/c-c++-common/gomp/sink-3.c
/* { dg-do compile } */
/* { dg-options "-fopenmp" } */
// { dg-additional-options "-Wno-deprecated-openmp" }
/* Test that we can handle multiple undeclared sink variables
   gracefully.  */

void bar (int *);

void
foo ()
{
  int i,j;
#pragma omp parallel for ordered(1)
  for (i=0; i < 100; ++i)
    {
#pragma omp ordered depend(sink:poo-1,paa+1) /* { dg-error "poo.*declared.*paa.*declared" } */
    bar(&i);
#pragma omp ordered depend(source)
    }
}
